# Texta-AI

./: .env.example  .gitignore  DEV-TOOLS.md  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
scripts/: __init__.py  dev-tools.py  install-dev-tools.ps1  install-dev-tools.sh  test_exception.py
src/: __init__.py  animation.py  capture.py  correction.py  gui.py  keyboard_listener.py  logger_config.py  main.py  paste.py
tests/: __init__.py  test_animation.py  test_capture.py  test_correction.py  test_gui.py  test_keyboard_listener.py  test_main.py  test_paste.py
